Fixed styling on monzo logo, broken into two rows. Reduced scaling size
 On branch dev
 Your branch is up-to-date with 'origin/dev'.

 Changes to be committed:
	modified:   sass/screen.scss
	modified:   static/assets/JS/js.js
	modified:   static/assets/stylesheets/screen.css
	modified:   static/index.html

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -922,6 +922,9 @@ body, html {
 
 }
 
+.sponsorsRowWidth{
+    width: 100%;
+}
 
 #goldSponsorRow{
     margin-bottom: 13%;
